src/objects/Course_Attendee__c.object
<CustomObject>
    <description>Used to track a student who attends a course.</description>
    <fields>
        <fullName>Course_Delivery__c</fullName>
        <description>Course delivery that student is attending.</description>
        <label>Course Delivery</label>
        <referenceTo>Course_Delivery__c</referenceTo>
        <relationshipLabel>Course Attendees</relationshipLabel>
        <relationshipName>Course_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>InstructorNotes__c</fullName>
        <label>Instructor Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of course attendee.</description>
        <inlineHelpText>Enrolled - Student is enrolled in course delivery.
Completed - Student attended course delivery.
Course Cancelled - AW Computing cancelled course delivery.
No Show - Student did not show up for course delivery.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Course Cancelled</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <formula>HYPERLINK( Student__r.Id, TRIM( Student__r.FirstName &amp; &quot; &quot; &amp; Student__r.LastName ), &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Technician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Attendees</relationshipLabel>
        <relationshipName>Course_Attendees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Course Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATTENDEE-{00000}</displayFormat>
        <label>Course Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>